--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "hackernews",
+  "name": "react-hacker-news",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "styled-components": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
